--- a/python/Notebook.ipynb
+++ b/python/Notebook.ipynb
@@ -26,7 +26,7 @@
         "id": "igimjAzTcsPh",
         "outputId": "1dbc311f-f04b-48c8-ec6b-feb2a4c1933a"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -101,7 +101,7 @@
         "df_joined.drop(columns=['today','Age'], inplace=True)\n",
         "\n",
         "# Export filled file\n",
-        "df_joined.to_csv(\"1_data_cleaning.csv\")"
+        "df_joined.to_csv(\"CSV/1_data_cleaning.csv\")"
       ]
     },
     {
@@ -123,7 +123,7 @@
         "df_joined_modified[df_joined_modified['ConvertedInDays'] > 0].head()\n",
         "\n",
         "\n",
-        "df_joined.to_csv(\"2_data_manipulation.csv\")\n"
+        "df_joined.to_csv(\"CSV/2_data_manipulation.csv\")\n"
       ],
       "metadata": {
         "id": "NUIUhmtTcjSX"
@@ -160,7 +160,7 @@
         "df_joined[\"FinalPrice\"] = df_joined[\"Booking_Price\"] - df_joined[\"Discount\"]\n",
         "df_joined.head()\n",
         "\n",
-        "df_joined.to_csv(\"3_data_transformation.csv\")"
+        "df_joined.to_csv(\"CSV/3_data_transformation.csv\")"
       ],
       "metadata": {
         "id": "5fUv6Z39cqPD"
