--- a/python/Pipeline.ipynb
+++ b/python/Pipeline.ipynb
@@ -26,7 +26,7 @@
         "id": "igimjAzTcsPh",
         "outputId": "1dbc311f-f04b-48c8-ec6b-feb2a4c1933a"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -123,7 +123,7 @@
         "\n",
         "# Uncomment below to check intermediate reworked event\n",
         "# df = pd.DataFrame.from_records(reworked_events)\n",
-        "# df.to_csv(\"reworked_events.csv\")\n",
+        "# df.to_csv(\"CSV/reworked_events.csv\")\n",
         "\n",
         "print(\"Results:\")\n",
         "print(f\"Event Processed: {len(reworked_events)}\")\n",
@@ -148,7 +148,7 @@
         "print(null_counts)\n",
         "\n",
         "print(\"Check 'flat_table.csv' for final results\")\n",
-        "df.to_csv(\"flat_table.csv\")\n",
+        "df.to_csv(\"CSV/flat_table.csv\")\n",
         "\n",
         "df.head(5)"
       ],
